# rogerrouter

./: .gitignore  .gitlab-ci.yml  README.md  TODO  configure.ac  meson.build  org.tabos.roger.json  post_install.py
.gitlab-ci/: Dockerfile  Dockerfile.linux  Dockerfile.mxe  README.md  build-mxe.sh  packaged_deps-mxe.sh  run-docker-linux.sh  run-docker-mxe.sh  run-docker.sh
HomebrewFormula/: capi20.rb  librm.rb  rogerrouter.rb
build-aux/linux/: org.tabos.roger.json
build-aux/macosx/HomebrewFormula/: capi20.rb  libgdata.rb  librm.rb  rogerrouter.rb
build-aux/windows/: README  build-msys.sh  create-setup.sh  meson.build  roger.ico.in  roger.nsi.in  roger_winres.rc.in
build-aux/windows/mxe-pkgs/: adwaita-icon-theme.mk  spandsp-1-fixes.patch
data/: check-code-style  meson.build  org.tabos.roger.appdata.xml.in  org.tabos.roger.desktop.in  org.tabos.roger.gschema.xml
platform/linux/: build-flatpak.sh  org.tabos.roger.flatpak.json  org.tabos.roger.json
platform/windows/: meson.build  mingw-cross.txt  roger.nsi.in  roger_winres.rc.in
plugins/: meson.build
plugins/evolution/: ebook-sources.h  evolution.c  meson.build  org.tabos.roger.plugins.evolution.gschema.xml
plugins/google/: google.c  meson.build
plugins/gtknotify/: gtknotify.c  gtknotify.desktop.in  gtknotify.glade  gtknotify.gresource.xml  meson.build
plugins/indicator/: indicator-fallback.c  indicator.c  indicator.desktop.in  meson.build
plugins/keychain/: keychain.c
plugins/osxab/: osxab.c
plugins/thunderbird/: meson.build  thunderbird.c
plugins/vcard/: meson.build  vcard.c  vcard.h
plugins/webjournal/: webjournal.c
po/: POTFILES  de.po  nl.po
roger/: Makefile.am  about.c  about.h  answeringmachine.c  answeringmachine.h  application.c  application.h  assistant.c  assistant.h  contacts.c  contacts.h  contactsearch.c  contactsearch.h  debug.c  debug.h  fax.c  fax.h  journal.c  journal.h  main_ui.c  meson.build  org.tabos.roger.appdata.xml.in  pdf.c  phone.c  phone.h  plugins.c  preferences-audio.c  preferences-audio.h  preferences-plugins.c  preferences-plugins.h  preferences-telephony.c  preferences-telephony.h  preferences.c  preferences.h  print.c  print.h  roger-phone.h  roger-voice-mail.c  roger-voice-mail.h  roger_winres.rc.in  (+4 more)
roger/contrib/: gd-two-lines-renderer.h
roger/data/: org.tabos.roger.gschema.xml
roger/preferences/: preferences-telephony.h  preferences.c  preferences.h
roger/resources/: assistant.glade  journal.glade  roger.gresource.xml  settings.glade
roger/resources/ui/: #roger-journal2.glade#  assistant.ui  fax.ui  journal-popover.ui  journal.ui  phone.ui  preferences.ui  roger-assistant.ui  roger-journal.ui  roger-journal2.glade
src/: application.c  assistant.c  contacts.c  contacts.h  contactsearch.c  debug.c  journal.c  journal.h  main_ui.c  meson.build  print.h  roger-assistant.c  roger-assistant.h  roger-contactsearch.c  roger-contactsearch.h  roger-debug.c  roger-debug.h  roger-fax.c  roger-fax.h  roger-journal.c  roger-journal.h  roger-phone.c  roger-phone.h  roger-print.c  roger-print.h  roger-settings.c  roger-settings.h  roger-shell.c  roger-shell.h  roger-voice-mail.c  roger-voice-mail.h
src/contrib/: gd-two-lines-renderer.c  suggestion-entry.c  suggestion-entry.h
src/preferences/: preferences-audio.c  preferences-audio.h  preferences-plugins.c  preferences-plugins.h  preferences-telephony.c  preferences-telephony.h  preferences.c  preferences.h
src/resources/: about.ini  roger.gresource.xml  suggestion-entry.css
src/resources/ui/: assistant.ui  debug.ui  fax.ui  journal-popover.ui  journal.ui  phone.ui  preferences.ui  shortcuts.ui  voice-mail.ui
subprojects/: libcapi20.wrap  librm.wrap
